--- a/rates/package.json
+++ b/rates/package.json
@@ -13,6 +13,7 @@
     "sass": "^1.59.3",
     "web-vitals": "^2.1.4"
   },
+  "proxy": "http://itgirlschool.justmakeit.ru",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -37,4 +38,5 @@
       "last 1 safari version"
     ]
   }
+ 
 }
